# CLOUDCLEAR

./: .docker-ports  .dockerignore  .env.example  .gitignore  CDN_BYPASS_FEATURES.md  CHANGELOG_CROSS_PLATFORM.md  CMakeLists.txt  Caddyfile  DNS_ZONE_TRANSFER_IMPLEMENTATION_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_STARTUP.md  DSSSL_CRYPTO_OFFENSIVE.md  Dockerfile  Dockerfile.simple  Makefile  Makefile.opsec  Makefile.optimized  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_1_INTEGRATION_VALIDATION_REPORT.md  PHASE_2_DEFENSIVE_SECURITY_SCHEDULE.md  QUICKSTART.md  README.md  advanced_ip_detection.c  build.bat  cloudclear-tui-recon  cloudclear.sh  cloudunflare  cloudunflare-architecture-diagram.html  cloudunflare.c  cloudunflare_tui_main.c  config.h  dns_enhanced.c  dns_enhanced.h  docker-compose.simple.yml  docker-compose.yml  docker-ports.sh  docker-start.sh  fluent-bit.conf  install.sh  parsers.conf  (+8 more)
.history/: DOCKER_STARTUP_20251202171416.md  DOCKER_STARTUP_20251202171609.md  DOCKER_STARTUP_20251202172002.md  DOCKER_STARTUP_20251202172003.md  DOCKER_STARTUP_20251202172005.md  DOCKER_STARTUP_20251202172007.md  DOCKER_STARTUP_20251202172024.md  Makefile_20251202170007  Makefile_20251202170016  Makefile_20251202170551  docker-compose_20251202171416.yml  docker-ports_20251202171416.sh  docker-start_20251202171608.sh
api/: .coveragerc  .gitignore  README.md  pytest.ini  requirements-simple.txt  requirements-test.txt  requirements.txt  server.py  simple_api.py  test_server.py
data/config/: docker-runtime.conf
data/wordlists/: README.md  user-agents.txt
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ADVANCED_IP_DETECTION.md  CLOUDFLARE_RADAR_INTEGRATION_PLAN.md  CLOUD_INTEGRATION_COMPLETE.md  CODEBASE_ARCHITECTURE.md  COMPLETE_CLOUD_INTEGRATION_PLAN.md  COMPLETE_INTEGRATION_SUMMARY.md  DOCKER.md  ENHANCEMENTS_SUMMARY.md  EXPLORATION_SUMMARY.md  IMPROVEMENTS_FROM_WAF_RESEARCH.md  INSTALLATION_COMPLETE.txt  PHASE1_AGENT_COORDINATION.md  PLATFORM_SUPPORT.md  README.md  ROOT_STRUCTURE.md  SIMPLE_API.md  TUI_ENHANCED.md  TUI_GUIDE.md  WAF_EVASION.md  WEB_UI_DEPLOYMENT.md  WINDOWS_BUILD.md  universal_docs_browser_enhanced.py
docs/features/: api-free-reconnaissance-agent-assignment-matrix.md  phase-2-coordination-summary.md  phase-3-coordination-complete.md
docs/implementation/: COMPILER_INSTRUCTIONS.md  THREAD_SAFETY_SUMMARY.md
docs/phases/: PHASE_1_HTTP_BANNER_COMPLETE.md
docs/security/: OPSEC_FRAMEWORK_DOCUMENTATION.md
docu/: README.md
docu/implementation/: THREAD_SAFETY_FIXES.md  api-free-reconnaissance-implementation-roadmap.md
docu/phases/: FOUNDATION_COMPLETE.md
examples/: dns_zone_transfer_optimized_example.c
include/: advanced_ip_detection.h  cloudclear_tui.h  cloudclear_tui_config.h  cloudclear_tui_enhanced_modules.h  config.h  dns_enhanced.h  platform_compat.h
performance_modules/: cpu_affinity.c  lockfree_queue.c  memory_pool.c  performance_integration.h  simd_utils.c  thread_pool_optimized.c
recon_modules/common/: recon_common.h  recon_opsec.c  recon_result_aggregator.h
recon_modules/dns_bruteforce/: dns_bruteforce.h  dns_bruteforce_enhanced.c  test_enhanced_bruteforce.c
recon_modules/dns_zone_transfer/: dns_zone_transfer.c  dns_zone_transfer.h  dns_zone_transfer_enhanced.c
recon_modules/http_banner/: Makefile  README.md
recon_modules/port_scanner/: port_scanner.h
scripts/: Makefile.recon  docker-network.sh  docker-security.sh
src/core/: cloudunflare.c  dns_enhanced.c
src/modules/: advanced_ip_detection.c
src/modules/cloud/: cloud_detector.c  cloud_detector.h
src/modules/cloud/akamai/: akamai.c  akamai.h
src/modules/cloud/alibaba/: alibaba.c  alibaba.h
src/modules/cloud/aws/: aws.c  aws.h
src/modules/cloud/azure/: azure.c  azure.h
src/modules/cloud/censys/: censys_api.c  censys_api.h
src/modules/cloud/digitalocean/: digitalocean.c  digitalocean.h
src/modules/cloud/fastly/: fastly.c  fastly.h
src/modules/cloud/gcp/: gcp.c  gcp.h
src/modules/cloud/oracle/: oracle.c  oracle.h
src/modules/cloud/shodan/: shodan_api.c  shodan_api.h
src/modules/cloud/virustotal/: virustotal_api.c  virustotal_api.h
src/modules/performance/: cpu_affinity.c  lockfree_queue.c  memory_pool.c  performance_integration.c  performance_integration.h  performance_monitor.c  simd_utils.c  thread_pool_optimized.c
src/modules/recon/: cloudunflare_integration_patch.h  recon_integration.h
src/modules/recon/advanced_recon/: advanced_recon.c  advanced_recon.h
src/modules/recon/cloudflare_radar/: cloudflare_radar.c  cloudflare_radar.h  cloudflare_radar_api.c  cloudflare_radar_parser.c  cve_2025_detector.c  cve_2025_detector.h
src/modules/recon/common/: recon_common.c  recon_common.h  recon_config_manager.h  recon_integration_manager.h  recon_module_interface.h  recon_opsec.c  recon_opsec.h  recon_proxy.c  recon_result_aggregator.h
src/modules/recon/crypto_offensive/: crypto_offensive.c  crypto_offensive.h
src/modules/recon/cve_2025_detector/: cve_2025_detector.c  cve_2025_detector.h
src/modules/recon/dns_bruteforce/: Makefile  README.md  dns_bruteforce.c  dns_bruteforce.h  dns_bruteforce_enhanced.c  dns_bruteforce_enhanced.h  enhanced_bruteforce_example.c
src/modules/recon/dns_zone_transfer/: dns_zone_transfer.c  dns_zone_transfer.h  dns_zone_transfer_enhanced.c
src/modules/recon/http_banner/: http_banner.c  http_banner.h  http_banner_advanced.c  http_banner_demo.c  http_banner_test.c  (+3 more)
src/tui/: cloudclear_tui.c  cloudclear_tui_config.c  cloudclear_tui_enhanced.c  cloudclear_tui_enhanced_modules.c  cloudclear_tui_screens.c  cloudunflare_tui_main.c
tests/: test_zone_transfer_bin  thread_safety_test.c  thread_safety_test_bin
web/: 404.html  index.html
web/css/: tempest-class-c.css
web/js/: app.js
(+3 files in other folders)
